# apitofsim-web

./: .dockerignore  .gitignore  .prekignore  Dockerfile  README.md  env.yaml  fetch-and-start.sh  package-lock.json  package.json  prek.toml  pyproject.toml  pyrightconfig.json  update-container-lock.sh
.github/workflows/: qa.yml
datasets/: .gitignore  README.md  datasets.toml  fetch-dbs.sh  ingest-turso.sh  ingest.sh  prepare-turso.slurm  prepare.sh
src/css/: index.css
src/ingest/: ingest_from_apitofsim.py  init.py  tables.sql
src/js/: index.ts  quantityinput.js  unitswitcher.js  unitsystem.ts
src/vms/: app.py  forms.py  utils.py
src/vms/pintweb/: __init__.py  alpine.py  pint.py
src/vms/pintweb/wtforms/: __init__.py  quantityinput.py
src/vms/static/: index.css  index.js
src/vms/templates/: base.html
src/vms/templates/analysis/: body.html  tabs.html
src/vms/templates/pintweb/: _quantity_input.html  _unit_input.html  _unit_select.html
src/vms/templates/settings/: _3dmoljs.html  _render_chain.html  _render_instrument.html  _render_pathways.html  settings.html
src/vms/templates/ui/: _table_form.html
